gcc-14.2.0/gcc/testsuite/gm2/iso/const/fail/testchr2.mod
version https://git-lfs.github.com/spec/v1
oid sha256:24fbda3a908df9f4c178bc59e7a011898a5dee83a12cddff7cd06d567119d01a
size 87
